2006-10-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* python/lilylib.py (system): use os.system for mingw32

	* scripts/lilypond-book.py (bindir): use os.pathsep for prepending
	to $PATH.

	* scm/backend-library.scm: update email address.

	* Documentation/topdocs/NEWS.tely (Top): add duration-log override
	example.

	* scm/define-grobs.scm (all-grob-descriptions): use callback to
	calc dot count.

	* lily/dots-engraver.cc (class Dots_engraver): new engraver:
	handle dot creation separately.

	* lily/tab-note-heads-engraver.cc (process_music): idem.

	* lily/drum-note-engraver.cc (process_music): idem.

	* lily/note-heads-engraver.cc (process_music): idem.

	* lily/rest-engraver.cc: don't set duration-log.

	* scm/output-lib.scm (string-number::calc-text): new function.
	(note-head::calc-duration-log): new function.

	* lily/fingering-engraver.cc (make_script): remove 'text setting.

	* scm/output-lib.scm (fingering::calc-text): new function.

2006-10-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py: Fix typo gs-load-font -> gs-load-fonts
	 and include-eps-font -> include-eps-fonts

2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/multi-measure-rest-engraver.cc: use internalBarNumber

	* lily/timing-translator.cc: list properties.
	(start_translation_timestep): update internalBarNumber too.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add internalBarNumber.

	* input/regression/spacing-no-note.ly: new file.

	* buildscripts/output-distance.py (link_file): verbosity for OSError.

	* lily/book.cc: #include cleanup.

	* lily/include/lily-guile-macros.hh: add assert to
	scm_or_str2symbol(SCM).

	* VERSION (PATCH_LEVEL): bump version.

	* lily/spacing-spanner.cc (musical_column_spacing): handle
	musical->nonmusical spacing case, where there is no spacing
	wish. Fixes issue #61.

	* lily/pango-font.cc (text_stencil): allow 'tight' bounds.
	(pango_item_string_stencil): use logical rect horizontally (to